--- a/path-of-yoga-light/yoga.css
+++ b/path-of-yoga-light/yoga.css
@@ -207,6 +207,22 @@ audio
     margin: 1em;
 }
 
+section
+{
+    width: 90%;
+    padding: 1em;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 1em;
+    margin-block-end: 1em;
+    background-color: #c8DDDE;
+}
+
+section form
+{
+    padding: 0;
+}
+
 @media only screen and (max-width: 1024px)
 {
     body 
