--- a/Project2Quirk/qcodingmain.css
+++ b/Project2Quirk/qcodingmain.css
@@ -113,3 +113,24 @@ footer {
     padding: 10px;
     text-align: center;
 }
+
+form
+{
+    width: 240px;
+}
+
+input
+{
+    margin: 10px;
+    padding: 10px;
+}
+
+@media only screen and (max-width: 1024px)
+{
+    nav li
+    {
+        display: inline-flex;
+        padding: 10px;
+        margin: 20px;
+    }
+}
